# curio-agent-sdk

./: .gitignore  LICENSE  Makefile  PUBLISHING_GUIDE.md  README.md  SDK_IMPROVEMENT_SCOPE.md  __init__.py  exceptions.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
config/: __init__.py  settings.py
connectors/: base.py  bridge.py
core/: README.md  __init__.py  agent.py  base_agent.py  builder.py  checkpoint.py  circuit_breaker.py  component.py  context.py  credentials.py  event_bus.py  models.py  object_identifier_map.py  permissions.py  runtime.py  skills.py  state.py  state_store.py  structured_output.py  subagent.py  task_manager.py  tool_registry.py
core/loops/: __init__.py  base.py  plan_critique.py  tool_calling.py
core/tools/: executor.py  registry.py  schema.py  tool.py
docs/: PUBLISHING.md  REFACTOR_PLAN.md  TEST_PLAN.md
examples/: ONPREM_LLM_GUIDE.md  README.md  __init__.py  content_curator_agent.py  custom_onprem_provider.py  decorator_tools_example.py  onprem_llm_agent_example.py  recommended_template.env  simple_agent.py  tool_agent_anthropic.py  tool_agent_groq.py  tool_agent_ollama.py  tool_agent_openai.py  tools.py
examples/chat_assistant/: .env.example  .gitignore  README.md
examples/chat_assistant/backend/: agent.py  app.py  requirements.txt
examples/chat_assistant/frontend/: index.html  package-lock.json  package.json  vite.config.js
examples/env_examples/: README.md  local_ollama.env  minimal_auto_detect.env  multi_provider_failover.env  simple_single_provider.env  single_model_all_tiers.env  single_provider_tiered.env
llm/: README.md  __init__.py  batch_client.py  client.py  models.py  router.py  routing.py  service.py  token_counter.py
llm/providers/: __init__.py  anthropic.py  base.py  groq.py  ollama.py  openai.py
mcp/: adapter.py  bridge.py  client.py
memory/: __init__.py  graph.py  key_value.py  manager.py  policies.py  vector.py  working.py
middleware/: __init__.py  base.py  consumers.py  cost_tracker.py  guardrails.py  logging_mw.py  rate_limit.py  retry.py  tracing.py
models/: __init__.py  agent.py  llm.py
persistence/: README.md  base.py  memory.py  postgres.py  sqlite.py
src/curio_agent_sdk/: __init__.py
src/curio_agent_sdk/base/: __init__.py
src/curio_agent_sdk/cli/: __init__.py  cli.py
src/curio_agent_sdk/connectors/: __init__.py  base.py  bridge.py
src/curio_agent_sdk/core/: __init__.py  agent.py  audit.py  builder.py  cli.py  context.py  event_bus.py  human_input.py  instructions.py  plugins.py  runtime.py  session.py  state.py  state_store.py  task_manager.py
src/curio_agent_sdk/credentials/: __init__.py
src/curio_agent_sdk/llm/: __init__.py  client.py  router.py
src/curio_agent_sdk/mcp/: __init__.py  bridge.py  config.py  transport.py
src/curio_agent_sdk/memory/: __init__.py  base.py  composite.py  conversation.py  episodic.py  file_memory.py  manager.py  self_editing.py  vector.py
src/curio_agent_sdk/middleware/: __init__.py  base.py  consumers.py  cost_tracker.py  guardrails.py  logging_mw.py  prometheus.py  rate_limit.py  tracing.py
testing/: __init__.py  benchmark.py  coverage.py  fixtures.py  harness.py  mock_llm.py  regression.py  replay.py  snapshot.py  toolkit.py
tests/: conftest.py
tests/e2e/: __init__.py  test_coding_agent.py  test_memory_agent.py  test_multi_agent.py  test_multi_turn_agent.py  test_resilient_agent.py  test_simple_agent.py  test_structured_agent.py  test_tool_agent.py
tests/integration/: __init__.py  test_agent_builder_full.py  test_agent_streaming.py  test_agent_with_hooks.py  test_agent_with_memory.py  test_agent_with_middleware.py  test_agent_with_permissions.py  test_agent_with_plan_mode.py  test_agent_with_sessions.py  test_agent_with_skills.py  test_agent_with_state.py  test_agent_with_structured.py  test_agent_with_subagents.py  test_agent_with_tools.py  test_connector_integration.py  test_cost_budget.py  test_event_bus_integration.py  test_llm_routing.py  test_mcp_integration.py  test_memory_persistence.py  test_middleware_pipeline.py  test_plugin_system.py
tests/performance/: __init__.py  test_memory_operations_perf.py  test_middleware_overhead.py  test_state_checkpoint_perf.py  test_tool_execution_perf.py
tests/verify/: README.md  __init__.py  test_sdk_verify.py
tools/: __init__.py  browser.py  code.py  http.py
(+160 files in other folders)
