[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curio-agent-sdk"
version = "0.1.0"
description = "A flexible, model-agnostic agentic framework for building autonomous AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Curio Team"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
groq = ["groq>=0.4.0"]
ollama = ["ollama>=0.1.0"]
postgres = ["psycopg2-binary>=2.9.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "groq>=0.4.0",
    "ollama>=0.1.0",
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/curio-agent-sdk"
Documentation = "https://github.com/your-org/curio-agent-sdk#readme"
Repository = "https://github.com/your-org/curio-agent-sdk.git"
Issues = "https://github.com/your-org/curio-agent-sdk/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
