[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curio-agent-sdk"
version = "0.6.0"
description = "Production-grade agent harness for building autonomous AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Curio Team"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0", "tiktoken>=0.5.0"]
anthropic = ["anthropic>=0.40.0"]
groq = ["openai>=1.0.0", "tiktoken>=0.5.0"]  # Groq uses OpenAI-compatible client
ollama = ["openai>=1.0.0"]  # Ollama uses OpenAI-compatible client
postgres = ["psycopg2-binary>=2.9.0"]
structured = ["pydantic>=2.0.0"]  # For response_format with Pydantic models
computer-use = ["pyautogui>=1.0.0"]
browser = ["playwright>=1.40.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "tiktoken>=0.5.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pyautogui>=1.0.0",
    "playwright>=1.40.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ujjalsharma100/curio-agent-sdk"
Documentation = "https://github.com/ujjalsharma100/curio-agent-sdk#readme"
Repository = "https://github.com/ujjalsharma100/curio-agent-sdk.git"
Issues = "https://github.com/ujjalsharma100/curio-agent-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["curio_agent_sdk*"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
